Dodanie spring security z jwt, konfiguracja endpointu logowania, zmiana wersji swaggera na 3 oraz dodanie nowej tabeli ról.
